--- a/addons/account_check_printing/views/account_payment_views.xml
+++ b/addons/account_check_printing/views/account_payment_views.xml
@@ -26,7 +26,7 @@
             <field name="inherit_id" ref="account.view_account_payment_invoice_form" />
             <field name="arch" type="xml">
                 <xpath expr="//div[@name='amount_div']" position="after">
-                    <field name="check_amount_in_words" attrs="{'invisible': [('payment_method_code', '!=', 'check_printing')]}" groups="base.group_no_one"/>
+                    <field name="check_amount_in_words" attrs="{'invisible': [('payment_method_code', '!=', 'check_printing')]}"/>
                 </xpath>
                 <xpath expr="//field[@name='communication']" position="after">
                     <field name="check_manual_sequencing" invisible="1" readonly="1"/>
@@ -40,8 +40,9 @@
             <field name="model">account.register.payments</field>
             <field name="inherit_id" ref="account.view_account_payment_from_invoices" />
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='amount']" position="after">
-                    <field name="check_amount_in_words" attrs="{'invisible': [('payment_method_code', '!=', 'check_printing')]}" groups="base.group_no_one"/>
+                <xpath expr="//div[@name='amount_div']" position="after">
+                    <field name="check_amount_in_words"
+                           attrs="{'invisible': ['|', ('payment_method_code', '!=', 'check_printing'), ('multi', '=', True)]}"/>
                 </xpath>
                 <xpath expr="//field[@name='communication']" position="after">
                     <field name="check_manual_sequencing" invisible="1" readonly="1"/>
