--- a/addons/website/static/src/scss/website.edit_mode.scss
+++ b/addons/website/static/src/scss/website.edit_mode.scss
@@ -156,3 +156,10 @@ table.editorbar-panel {
         }
     }
 }
+
+.editor_has_snippets {
+    .o_header_affixed {
+        left: $o-we-sidebar-width !important;
+        top: var(--o-we-toolbar-height) !important;
+    }
+}
