[IMP] pos_blackbox_sweden: Create new module for pos sweden localisation

--- a/addons/point_of_sale/views/pos_order_view.xml
+++ b/addons/point_of_sale/views/pos_order_view.xml
@@ -6,7 +6,7 @@
         <field name="arch" type="xml">
             <form string="Point of Sale Orders" create="0">
                 <header>
-                    <button name="%(action_pos_payment)d" string="Payment" class="oe_highlight" type="action" states="draft" />
+                    <button name="%(action_pos_payment)d" string="Payment" class="oe_highlight" type="action" states="draft" id="order_payment_button"/>
                     <button name="action_pos_order_invoice" string="Invoice" type="object"
                             attrs="{'invisible': ['|', ('invoice_group', '=', False), ('state','!=','paid')]}"/>
                     <button name="refund" string="Return Products" type="object"
