--- a/addons/stock/views/stock_orderpoint_views.xml
+++ b/addons/stock/views/stock_orderpoint_views.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Order Point -->
     <record id="view_stock_warehouse_orderpoint_kanban" model="ir.ui.view">
         <field name="name">stock.warehouse.orderpoint.kanban</field>
         <field name="model">stock.warehouse.orderpoint</field>
@@ -8,6 +7,7 @@
             <kanban class="o_kanban_mobile">
                 <field name="name"/>
                 <field name="product_id"/>
+                <field name="trigger"/>
                 <field name="product_min_qty"/>
                 <field name="product_max_qty"/>
                 <templates>
@@ -34,20 +34,25 @@
         </field>
     </record>
 
-    <record id="view_warehouse_orderpoint_tree" model="ir.ui.view">
-        <field name="name">stock.warehouse.orderpoint.tree</field>
+    <record id="view_warehouse_orderpoint_tree_editable" model="ir.ui.view">
+        <field name="name">stock.warehouse.orderpoint.tree.editable</field>
         <field name="model">stock.warehouse.orderpoint</field>
         <field name="arch" type="xml">
-            <tree string="Reordering Rules" multi_edit="1">
-                <field name="name"/>
+            <tree string="Reordering Rules" editable="bottom" js_class="stock_orderpoint_list">
                 <field name="active" invisible="1"/>
-                <field name="warehouse_id" readonly="1" groups="stock.group_stock_multi_locations"/>
+                <field name="allowed_route_ids" invisible="1"/>
+                <field name="warehouse_id" invisible="1"/>
+                <field name="product_id"/>
                 <field name="location_id" options="{'no_create': True}" groups="stock.group_stock_multi_locations"/>
-                <field name="product_id" readonly="1"/>
-                <field name="company_id" readonly="1" groups="base.group_multi_company"/>
+                <field name="qty_on_hand"/>
+                <field name="qty_forecast"/>
+                <field name="json_lead_days_popover" string=" " widget="popover_widget" attrs="{'invisible': ['|', ('id', '=', False), ('trigger', '=', 'on_order')]}"/>
+                <field name="qty_to_order"/>
+                <field name="route_id"/>
+                <field name="trigger"/>
                 <field name="product_min_qty"/>
                 <field name="product_max_qty"/>
-                <field name="product_uom" options="{'no_open': True, 'no_create': True}" groups="uom.group_uom"/>
+                <field name="company_id" readonly="1" groups="base.group_multi_company"/>
             </tree>
         </field>
     </record>
@@ -119,12 +124,12 @@
         </field>
     </record>
 
-    <record id="action_orderpoint_form" model="ir.actions.act_window">
+    <record id="action_orderpoint" model="ir.actions.act_window">
         <field name="name">Reordering Rules</field>
         <field name="res_model">stock.warehouse.orderpoint</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="view_mode">tree,kanban,form</field>
-        <field name="view_id" ref="view_warehouse_orderpoint_tree"/>
+        <field name="view_mode">tree,kanban</field>
+        <field name="view_id" ref="view_warehouse_orderpoint_tree_editable"/>
         <field name="search_view_id" ref="warehouse_orderpoint_search" />
         <field name="help" type="html">
           <p class="o_view_nocontent_smiling_face">
@@ -137,6 +142,6 @@
 
     <menuitem
         id="menu_reordering_rules_config"
-        action="action_orderpoint_form"
+        action="action_orderpoint"
         name="Reordering Rules" parent="menu_stock_inventory_control" sequence="10"/>
 </odoo>
