--- a/addons/stock/views/stock_template.xml
+++ b/addons/stock/views/stock_template.xml
@@ -10,6 +10,7 @@
             <script type="text/javascript" src="/stock/static/src/js/inventory_validate_button_controller.js"></script>
             <script type="text/javascript" src="/stock/static/src/js/inventory_validate_button_view.js"></script>
             <script type="text/javascript" src="/stock/static/src/js/stock_orderpoint_list_controller.js"></script>
+            <script type="text/javascript" src="/stock/static/src/js/stock_orderpoint_list_model.js"></script>
             <script type="text/javascript" src="/stock/static/src/js/stock_orderpoint_list_view.js"></script>
             <script type="text/javascript" src="/stock/static/src/js/stock_traceability_report_backend.js"></script>
             <script type="text/javascript" src="/stock/static/src/js/stock_traceability_report_widgets.js"></script>
