--- a/addons/stock/views/stock_orderpoint_views.xml
+++ b/addons/stock/views/stock_orderpoint_views.xml
@@ -124,19 +124,12 @@
         </field>
     </record>
 
-    <record id="action_orderpoint" model="ir.actions.act_window">
+    <record model="ir.actions.server" id="action_orderpoint">
         <field name="name">Reordering Rules</field>
-        <field name="res_model">stock.warehouse.orderpoint</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="view_mode">tree,kanban</field>
-        <field name="view_id" ref="view_warehouse_orderpoint_tree_editable"/>
-        <field name="search_view_id" ref="warehouse_orderpoint_search" />
-        <field name="help" type="html">
-          <p class="o_view_nocontent_smiling_face">
-            Create a reordering rule
-          </p><p>
-            Define a minimum stock rule so that Odoo creates automatically requests for quotations or draft manufacturing orders to resupply your stock.
-          </p>
+        <field name="model_id" ref="model_stock_warehouse_orderpoint"/>
+        <field name="state">code</field>
+        <field name="code">
+            action = model.action_view_orderpoints()
         </field>
     </record>
 
