--- a/addons/stock/views/stock_orderpoint_views.xml
+++ b/addons/stock/views/stock_orderpoint_views.xml
@@ -41,12 +41,13 @@
             <tree string="Reordering Rules" editable="bottom" js_class="stock_orderpoint_list">
                 <field name="active" invisible="1"/>
                 <field name="allowed_route_ids" invisible="1"/>
+                <field name="virtual" invisible="1"/>
                 <field name="warehouse_id" invisible="1"/>
                 <field name="product_id"/>
                 <field name="location_id" options="{'no_create': True}" groups="stock.group_stock_multi_locations"/>
-                <field name="qty_on_hand"/>
-                <field name="qty_forecast"/>
-                <field name="json_lead_days_popover" string=" " widget="popover_widget" attrs="{'invisible': ['|', ('id', '=', False), ('trigger', '=', 'on_order')]}"/>
+                <field name="qty_on_hand" force_save="1"/>
+                <field name="qty_forecast" force_save="1"/>
+                <field name="json_lead_days_popover" string=" " widget="popover_widget" attrs="{'invisible': ['|', '|', ('id', '=', False), ('trigger', '=', 'on_order'), ('virtual', '=', True)]}"/>
                 <field name="qty_to_order"/>
                 <field name="route_id"/>
                 <field name="trigger"/>
