--- a/addons/stock/views/stock_move_views.xml
+++ b/addons/stock/views/stock_move_views.xml
@@ -82,19 +82,16 @@
                     <field name="scrapped" invisible="1"/>
                     <field name="picking_code" invisible="1"/>
                     <field name="product_type" invisible="1"/>
-                    <field name="show_details_visible" invisible="1"/>
                     <field name="show_reserved_availability" invisible="1"/>
-                    <field name="show_operations" invisible="1" readonly="1"/>
                     <field name="additional" invisible="1"/>
                     <field name="has_move_lines" invisible="1"/>
                     <field name="is_locked" invisible="1"/>
                     <field name="product_uom_category_id" invisible="1"/>
                     <field name="product_id" required="1" attrs="{'readonly': ['|', '&amp;', ('state', '!=', 'draft'), ('additional', '=', False), ('has_move_lines', '=', True)]}"/>
                     <field name="is_initial_demand_editable" invisible="1"/>
-                    <field name="is_quantity_done_editable" invisible="1"/>
-                    <field name="product_uom_qty" string="Demand" attrs="{'readonly': [('is_initial_demand_editable', '=', False)]}"/>
+                    <field name="product_uom_qty" string="Demand"/>
                     <field name="reserved_availability" string="Reserved"/>
-                    <field name="quantity_done" string="Done" attrs="{'readonly': [('is_quantity_done_editable', '=', False)]}"/>
+                    <field name="quantity_done" string="Done"/>
                     <field name="product_uom" attrs="{'readonly': [('state', '!=', 'draft'), ('additional', '=', False)]}" options="{'no_open': True, 'no_create': True}" string="Unit of Measure" groups="uom.group_uom"/>
                 </tree>
             </field>
@@ -107,7 +104,6 @@
             <field name="arch" type="xml">
                 <kanban class="o_kanban_mobile">
                     <field name="product_id"/>
-                    <field name="show_details_visible"/>
                     <field name="product_uom_qty"/>
                     <field name="quantity_done"/>
                     <field name="reserved_availability"/>
@@ -124,9 +120,6 @@
                                     <div class="o_kanban_record_headings">
                                         <strong class="o_kanban_record_title"><span><field name="product_id"/></span></strong>
                                     </div>
-                                    <button name="action_show_details" string="Register lots, packs, location"
-                                            class="o_icon_button fa fa-list" type="object"
-                                            attrs="{'invisible': [('show_details_visible', '=', False)]}" options='{"warn": true}'/>
                                 </div>
                                 <div class="o_kanban_record_body">
                                     <div attrs="{'invisible': [('inventory_id', '=', False)]}">
@@ -169,113 +162,6 @@
             </field>
         </record>
 
-        <record id="view_stock_move_operations" model="ir.ui.view">
-            <field name="name">stock.move.operations.form</field>
-            <field name="model">stock.move</field>
-            <field name="priority">1000</field>
-            <field name="arch" type="xml">
-                <form string="Move Detail">
-                    <field name="company_id" invisible="1"/>
-                    <field name="state" invisible="1"/>
-                    <field name="location_id" invisible="1"/>
-                    <field name="location_dest_id" invisible="1"/>
-                    <field name="picking_id" invisible="1"/>
-                    <field name="is_locked" invisible="1"/>
-                    <field name="picking_type_entire_packs" invisible="1"/>
-                    <field name="display_assign_serial" invisible="1"/>
-                    <group>
-                        <group>
-                            <field name="product_id" readonly="1"/>
-                            <label for="product_uom_qty"/>
-                            <div class="o_row">
-                                <span><field name="product_uom_qty" readonly="1" nolabel="1"/></span>
-                                <span><field name="product_uom" readonly="1" nolabel="1"/></span>
-                            </div>
-                            <label for="quantity_done"/>
-                            <div class="o_row">
-                                <span><field name="quantity_done" readonly="1" nolabel="1"/></span>
-                                <span attrs="{'invisible': [('state', '=', 'done')]}"> / </span>
-                                <span><field name="reserved_availability" nolabel="1" attrs="{'invisible': [('state', '=', 'done')]}" /></span>
-                                <span><field name="product_uom" readonly="1" nolabel="1"/></span>
-                            </div>
-                            <field name="next_serial"
-                                attrs="{'invisible': [('display_assign_serial', '=', False)]}"/>
-                            <label for="next_serial_count" attrs="{'invisible': [('display_assign_serial', '=', False)]}"/>
-                            <div class="o_row" attrs="{'invisible': [('display_assign_serial', '=', False)]}">
-                                <span><field name="next_serial_count"/></span>
-                                <button name="action_assign_serial_show_details" type="object"
-                                        class="btn-link"
-                                        title="Assign Serial Numbers">
-                                    <span>Assign Serial Numbers</span>
-                                </button>
-                            </div>
-                        </group>
-                    </group>
-                    <field name="move_line_ids" attrs="{'readonly': ['|', ('state', '=', 'cancel'), '&amp;', ('state', '=', 'done'), ('is_locked', '=', True)]}" context="{'tree_view_ref': 'stock.view_stock_move_line_operation_tree', 'default_product_uom_id': product_uom, 'default_picking_id': picking_id, 'default_move_id': id, 'default_product_id': product_id, 'default_location_id': location_id, 'default_location_dest_id': location_dest_id, 'default_company_id': company_id}"/>
-                    <footer class="oe_edit_only">
-                        <button string="Confirm" special="save" class="oe_highlight"/>
-                        <button string="Discard" special="cancel"/>
-                    </footer>
-                </form>
-            </field>
-        </record>
-
-        <record id="view_stock_move_nosuggest_operations" model="ir.ui.view">
-            <field name="name">stock.move.operations.nosuggest.form</field>
-            <field name="model">stock.move</field>
-            <field name="priority">1000</field>
-            <field name="mode">primary</field>
-            <field name="inherit_id" ref="stock.view_stock_move_operations"/>
-            <field name="arch" type="xml">
-                <field name="move_line_ids" position="replace">
-                    <field name="move_line_nosuggest_ids" attrs="{'readonly': ['|', ('state', '=', 'cancel'), '&amp;', ('state', '=', 'done'), ('is_locked', '=', True)]}" context="{'tree_view_ref': 'stock.view_stock_move_line_operation_tree','default_picking_id': picking_id, 'default_move_id': id, 'default_product_id': product_id, 'default_location_id': location_id, 'default_location_dest_id': location_dest_id, 'default_company_id': company_id}"/>
-                </field>
-            </field>
-        </record>
-
-        <record id="view_stock_move_line_operation_tree" model="ir.ui.view">
-            <field name="name">stock.move.line.operations.tree</field>
-            <field name="model">stock.move.line</field>
-            <field name="priority">1000</field>
-            <field name="arch" type="xml">
-                <tree editable="bottom" decoration-muted="state == 'done' and is_locked == True" decoration-success="product_uom_qty==qty_done" decoration-danger="qty_done &gt; product_uom_qty and state != 'done' and picking_code != 'incoming'">
-                    <field name="company_id" invisible="1" force_save="1"/>
-                    <field name="picking_id" invisible="1" force_save="1"/>
-                    <field name="move_id" invisible="1" force_save="1" />
-                    <field name="picking_code" invisible="1"/>
-                    <field name="product_uom_category_id" invisible="1"/>
-                    <field name="product_id" invisible="1"/>
-                    <field name="package_level_id" invisible="1"/>
-                    <field name="location_id" options="{'no_create': True}" attrs="{'readonly': ['&amp;', ('package_level_id', '!=', False), ('parent.picking_type_entire_packs', '=', True)]}" invisible="not context.get('show_source_location')" domain="[('id', 'child_of', parent.location_id), '|', ('company_id', '=', False), ('company_id', '=', company_id)]" groups="stock.group_stock_multi_locations"/>
-                    <field name="location_dest_id" width="0.75" attrs="{'readonly': ['&amp;', ('package_level_id', '!=', False), ('parent.picking_type_entire_packs', '=', True)]}" invisible="not context.get('show_destination_location')" domain="[('id', 'child_of', parent.location_dest_id), '|', ('company_id', '=', False), ('company_id', '=', company_id)]" groups="stock.group_stock_multi_locations"/>
-                    <field name="lot_id" groups="stock.group_production_lot"
-                        attrs="{'readonly': ['&amp;', ('package_level_id', '!=', False), ('parent.picking_type_entire_packs', '=', True)]}"
-                        invisible="not context.get('show_lots_m2o')"
-                        domain="[('product_id', '=', parent.product_id), ('company_id', '=', company_id)]"
-                        context="{
-                            'active_picking_id': picking_id,
-                            'default_company_id': parent.company_id,
-                            'default_product_id': parent.product_id,
-                        }"
-                    />
-                    <field name="lot_name" widget="text" groups="stock.group_production_lot"
-                        placeholder="Write your SN/LN one by one or copy paste a list."
-                        attrs="{'readonly': ['&amp;', ('package_level_id', '!=', False), ('parent.picking_type_entire_packs', '=', True)]}"
-                        invisible="not context.get('show_lots_text')"/>
-                    <field name="package_id" attrs="{'readonly': ['&amp;', ('package_level_id', '!=', False), ('parent.picking_type_entire_packs', '=', True)]}" invisible="not context.get('show_package')" groups="stock.group_tracking_lot"/>
-                    <field name="result_package_id" attrs="{'readonly': ['&amp;', ('package_level_id', '!=', False), ('parent.picking_type_entire_packs', '=', True)]}" groups="stock.group_tracking_lot"/>
-                    <field name="owner_id" attrs="{'readonly': ['&amp;', ('package_level_id', '!=', False), ('parent.picking_type_entire_packs', '=', True)]}" invisible="not context.get('show_owner')" groups="stock.group_tracking_owner"/>
-                    <field name="is_initial_demand_editable" invisible="1"/>
-                    <field name="product_uom_qty" invisible="not context.get('show_reserved_quantity')" readonly="1"/>
-                    <field name="state" invisible="1"/>
-                    <field name="is_locked" invisible="1"/>
-                    <field name="picking_code" invisible="1"/>
-                    <field name="qty_done" attrs="{'readonly': ['|', '|', ('is_initial_demand_editable', '=', True), '&amp;', ('state', '=', 'done'), ('is_locked', '=', True), '&amp;', ('package_level_id', '!=', False), ('parent.picking_type_entire_packs', '=', True)]}"/>
-                    <field name="product_uom_id" options="{'no_open': True, 'no_create': True}" attrs="{'readonly': ['|', ('product_uom_qty', '!=', 0.0), '&amp;', ('package_level_id', '!=', False), ('parent.picking_type_entire_packs', '=', True)]}" string="Unit of Measure" groups="uom.group_uom"/>
-                </tree>
-            </field>
-        </record>
-
         <record id="view_stock_move_line_detailed_operation_tree" model="ir.ui.view">
             <field name="name">stock.move.line.operations.tree</field>
             <field name="model">stock.move.line</field>
@@ -295,7 +181,12 @@
                     <field name="owner_id" groups="stock.group_tracking_owner" attrs="{'column_invisible': [('parent.picking_type_code', '=', 'incoming')]}"/>
                     <field name="state" invisible="1"/>
                     <field name="lot_id" groups="stock.group_production_lot" attrs="{'column_invisible': [('parent.show_lots_text', '=', True)], 'invisible': [('lots_visible', '=', False)]}" context="{'default_product_id': product_id, 'default_company_id': company_id, 'active_picking_id': picking_id}" optional="show"/>
-                    <field name="lot_name" groups="stock.group_production_lot" attrs="{'column_invisible': [('parent.show_lots_text', '=', False)], 'invisible': [('lots_visible', '=', False)]}" context="{'default_product_id': product_id}"/>
+                    <field name="lot_name"
+                        widget="text"
+                        placeholder="Write your SN/LN one by one or copy paste a list."
+                        groups="stock.group_production_lot"
+                        attrs="{'column_invisible': [('parent.show_lots_text', '=', False)], 'invisible': [('lots_visible', '=', False)]}"
+                        context="{'default_product_id': product_id}"/>
                     <field name="is_initial_demand_editable" invisible="1"/>
                     <field name="product_uom_qty" readonly="1" attrs="{'column_invisible': ['|',('parent.immediate_transfer', '=', True),('parent.picking_type_code','=','incoming')]}" optional="show"/>
                     <field name="is_locked" invisible="1"/>
