--- a/addons/stock/views/stock_move_views.xml
+++ b/addons/stock/views/stock_move_views.xml
@@ -162,13 +162,14 @@
             </field>
         </record>
 
+        <!-- move in stock_move_line_views -->
         <record id="view_stock_move_line_detailed_operation_tree" model="ir.ui.view">
             <field name="name">stock.move.line.operations.tree</field>
             <field name="model">stock.move.line</field>
             <field name="priority">1000</field>
             <field name="arch" type="xml">
                 <tree editable="bottom" decoration-muted="(state == 'done' and is_locked == True)" decoration-danger="qty_done&gt;product_uom_qty and state!='done' and parent.picking_type_code != 'incoming'" decoration-success="qty_done==product_uom_qty and state!='done' and not result_package_id">
-                    <field name="product_id" required="1" attrs="{'readonly': ['|', ('state', '=', 'done'), ('move_id', '!=', False)]}"/>
+                    <field name="product_id" required="1" attrs="{'readonly': ['|', ('state', '=', 'done'), ('move_id', '!=', False)]}" force_save="1"/>
                     <field name="company_id" invisible="1"/>
                     <field name="move_id" invisible="1"/>
                     <field name="picking_id" invisible="1"/>
@@ -187,8 +188,10 @@
                         groups="stock.group_production_lot"
                         attrs="{'column_invisible': [('parent.show_lots_text', '=', False)], 'invisible': [('lots_visible', '=', False)]}"
                         context="{'default_product_id': product_id}"/>
-                    <field name="is_initial_demand_editable" invisible="1"/>
-                    <field name="product_uom_qty" readonly="1" attrs="{'column_invisible': ['|',('parent.immediate_transfer', '=', True),('parent.picking_type_code','=','incoming')]}" optional="show"/>
+                    <field name="demand_qty"
+                        force_save="1"
+                        attrs="{'column_invisible': [('parent.state', 'in', ('done', 'cancel'))], 'readonly': [('move_id', '!=', False)]}"/>
+                    <field name="product_uom_qty" readonly="1" attrs="{'column_invisible': ['|','|',('parent.immediate_transfer', '=', True),('parent.picking_type_code','=','incoming'),('parent.state', 'in', ('done', 'cancel'))]}" optional="show"/>
                     <field name="is_locked" invisible="1"/>
                     <field name="qty_done" attrs="{'readonly': [('state', 'in', ('done', 'cancel')), ('is_locked', '=', True)]}" force_save="1"/>
                     <field name="product_uom_id" force_save="1" attrs="{'readonly': [('state', '!=', 'draft')]}" groups="uom.group_uom"/>
