--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -517,3 +517,101 @@ blockquote {
     border-left: 5px solid $gray-300;
     font-style: italic
 }
+
+// Bg/text color classes generation
+@function has-related-color-classes($color-name, $component-type) {
+    @if type-of($color-name) != 'string' {
+        @return false;
+    }
+
+    $maps: ();
+    @if index($component-type, ('bg', 'text', 'btn')) {
+        $maps: append($maps, $theme-colors);
+    }
+    @if index($component-type, ('bg', 'text')) {
+        $maps: append($maps, $grays);
+    }
+    @each $map in $maps {
+        @if map-has-key($map, $color-name) {
+            @return true;
+        }
+    }
+
+    @return false;
+}
+@for $index from 1 through length($o-color-combinations) {
+    $config: nth($o-color-combinations, $index);
+    $-bg: map-get($config, 'bg');
+    $-text: map-get($config, 'text');
+    $-headings: map-get($config, 'headings');
+    $-link: map-get($config, 'link');
+    $-btn-primary: map-get($config, 'btn-primary');
+    $-btn-secondary: map-get($config, 'btn-secondary');
+
+    // Those color classes color multiple elements when applied on a snippet.
+    // Those rules are not important so that they can be overridden through
+    // bg and text utility classes. **
+    .o_cc#{$index} {
+        // Background & Text
+        @include o-bg-color(o-get-color($-bg), o-get-color($-text), $important: false);
+
+        // Headings
+        h1, h2, h3, h4, h5, h6 {
+            color: o-get-color($-headings);
+        }
+
+        // Links
+        $-link-extend-selector: null;
+        @if has-related-color-classes($-link, 'text') {
+            $-link-extend-selector: '.text-#{$-link}';
+        } @else if $-link {
+            $-link-extend-selector: '%cc-link-#{$index}';
+            @include text-emphasis-variant($-link-extend-selector, o-get-color($-link));
+        }
+        @if $-link-extend-selector {
+            a:not(.btn), .btn-link {
+                @extend #{$-link-extend-selector};
+            }
+        }
+
+        // Buttons (** for buttons, we can extend an other button class
+        // if possible as those rules are not important in bootstrap and it
+        // would not make sense to combine multiple btn classes anyway).
+
+        // Primary (FIXME what about alpha ?)
+        @if has-related-color-classes($-btn-primary, 'btn') {
+            .btn-primary {
+                @extend .btn-#{$-btn-primary};
+            }
+            .btn-outline-primary {
+                @extend .btn-outline-#{$-btn-primary};
+            }
+        } @else if $-btn-primary {
+            $-btn-primary-color: o-get-color($-btn-primary);
+            .btn-primary {
+                @include button-variant($-btn-primary-color, $-btn-primary-color);
+            }
+            .btn-outline-primary {
+                @include button-outline-variant($-btn-primary-color);
+            }
+        }
+
+        // Secondary (FIXME what about beta ?)
+        @if has-related-color-classes($-btn-secondary, 'btn') {
+            .btn-secondary {
+                @extend .btn-#{$-btn-secondary};
+            }
+            .btn-outline-secondary {
+                @extend .btn-outline-#{$-btn-secondary};
+            }
+        } @else if $-btn-secondary {
+            $-btn-secondary-color: o-get-color($-btn-secondary);
+            .btn-secondary {
+                @include button-variant($-btn-secondary-color, $-btn-secondary-color);
+            }
+            .btn-outline-secondary {
+                @include button-outline-variant($-btn-secondary-color);
+            }
+        }
+    }
+}
