[IMP] website, *: introduce new classes to color snippets
*: web, web_editor

New o_color_xxx where xxx is a number (1 -> 5) to style snippets:
comes with a background color, a text color, a heading color and a
primary button color which will later be possible to customize by
the user.

--- a/addons/web_editor/static/src/scss/secondary_variables.scss
+++ b/addons/web_editor/static/src/scss/secondary_variables.scss
@@ -37,3 +37,6 @@ $o-gray-color-palette: map-merge($o-transparent-grays, $o-gray-color-palette);
 @function palette-gray($key) {
     @return map-get($o-gray-color-palette, $key);
 }
+
+// Color combinations
+$o-color-combinations: nth($o-color-combinations-presets, $o-color-combinations-preset-number) !default;
