--- a/addons/web_editor/static/src/scss/web_editor.variables.scss
+++ b/addons/web_editor/static/src/scss/web_editor.variables.scss
@@ -324,34 +324,39 @@ $o-gray-color-palette-number: 1;
 $o-color-combinations-presets: (
     (
         (
-            'bg': 'alpha',
+            'bg': 'delta',
             'text': null,
-            'headings': 'gamma',
-            'btn-primary': 'gamma',
-        ),
-        (
-            'bg': 'beta',
-            'text': 'alpha',
-            'headings': 'black',
-            'btn-primary': 'gamma',
+            'headings': null,
+            'btn-primary': 'alpha',
+            'btn-secondary': 'beta',
         ),
         (
             'bg': 'gamma',
             'text': null,
-            'headings': 'white',
-            'btn-primary': 'black',
+            'headings': null,
+            'btn-primary': 'alpha',
+            'btn-secondary': 'beta',
         ),
         (
-            'bg': 'white',
-            'text': null,
-            'headings': 'gamma',
-            'btn-primary': 'gamma',
+            'bg': 'beta',
+            'text': 'delta',
+            'headings': 'delta',
+            'btn-primary': 'alpha',
+            'btn-secondary': 'gamma',
         ),
         (
-            'bg': 'black',
-            'text': null,
-            'headings': 'gamma',
-            'btn-primary': 'gamma',
+            'bg': 'alpha',
+            'text': 'delta',
+            'headings': 'delta',
+            'btn-primary': 'epsilon',
+            'btn-secondary': 'gamma',
+        ),
+        (
+            'bg': 'epsilon',
+            'text': 'delta',
+            'headings': 'delta',
+            'btn-primary': 'alpha',
+            'btn-secondary': 'gamma',
         ),
     ),
 ) !default;
