[TMP] allow presets' headings override
Use a custom value if provided, otherwise fall-back to contrast-safe
value. How to use in palette definition: the following example will
replace the headings color in preset-5 with "#db423d"

(
    'alpha': #db423d,
    'beta': #3f130e,
    'gamma': #efe8e7,
    'delta': #EAEAEA,
    'epsilon': #222,

    'headings-5': #db423d,
),

--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -556,7 +556,11 @@ blockquote {
 
         // Headings
         h1, h2, h3, h4, h5, h6 {
-            color: o-get-color($-headings);
+            @if type-of(o-get-color($-headings)) == color {
+                color: o-get-color($-headings);
+            } @else {
+                color: inherit;
+            }
         }
 
         // Primary buttons (** for buttons, we can extend an other button class
