--- a/addons/web_editor/static/src/scss/web_editor.variables.scss
+++ b/addons/web_editor/static/src/scss/web_editor.variables.scss
@@ -326,35 +326,35 @@ $o-color-combinations-presets: (
         (
             'bg': 'delta',
             'text': null,
-            'headings': null,
+            'headings': 'headings-1',
             'btn-primary': 'alpha',
             'btn-secondary': 'beta',
         ),
         (
             'bg': 'gamma',
             'text': null,
-            'headings': null,
+            'headings': 'headings-2',
             'btn-primary': 'alpha',
             'btn-secondary': 'beta',
         ),
         (
             'bg': 'beta',
             'text': 'delta',
-            'headings': 'delta',
+            'headings': 'headings-3',
             'btn-primary': 'alpha',
             'btn-secondary': 'gamma',
         ),
         (
             'bg': 'alpha',
             'text': 'delta',
-            'headings': 'delta',
+            'headings': 'headings-4',
             'btn-primary': 'epsilon',
             'btn-secondary': 'gamma',
         ),
         (
             'bg': 'epsilon',
             'text': 'delta',
-            'headings': 'delta',
+            'headings': 'headings-5',
             'btn-primary': 'alpha',
             'btn-secondary': 'gamma',
         ),
